--- a/HomeWorks/pages/home_works.html
+++ b/HomeWorks/pages/home_works.html
@@ -12,22 +12,22 @@
 <div class="wrapper">
     <div class="header">
         <div class="container">
-            <div class="inner_header">
+            <div class="header_inner">
                 <a href="../index.html">
-                    <div class="logotype">
+                    <div class="header_inner_logotype">
                         <h2>Java<span>Script</span></h2>
                     </div>
                 </a>
-                <ul class="menu">
-                    <li class="menu_link">
+                <ul class="header_inner_menu">
+                    <li class="header_inner_menu_link">
                         <a href="../pages/home_works.html">Home Works</a>
                     </li>
-                    <li class="menu_link">
+                    <li class="header_inner_menu_link">
                         <a href="../pages/lessons.html">Lessons</a>
                     </li>
-                    <li class="menu_link">
+                    <!-- <li class="header_inner_menu_link">
                         <a href="https://t.me/NurDinBuy16" target="_blank">Send hw</a>
-                    </li>
+                    </li> -->
                 </ul>
                 <button class="btn" id="btn-get">Click me!</button>
             </div>
@@ -89,17 +89,17 @@
 </div>
 
 <div class="modal">
-    <div class="modal_dialog">
-        <div class="modal_content">
-            <form action="#">
-                <div class="modal_close">&times;</div>
-                <div class="modal_title">Мы свяжемся с вами как можно быстрее!</div>
-                <input required placeholder="Ваше имя" name="name" type="text" class="modal_input">
-                <input required placeholder="Ваш номер телефона" name="phone" type="phone" class="modal_input">
-                <button class="btn btn_dark btn_min">Перезвонить мне</button>
-            </form>
-        </div>
-    </div>
+	<div class="modal_dialog">
+		<div class="modal_dialog_content">
+			<form action="#">
+				<div class="modal_dialog_content_close">&times;</div>
+				<div class="modal_dialog_content_title">Мы свяжемся с вами как можно быстрее!</div>
+				<input required placeholder="Ваше имя" name="name" type="text" class="modal_dialog_content_input">
+				<input required placeholder="Ваш номер телефона" name="phone" type="phone" class="modal_dialog_content_input">
+				<button class="btn btn_dark btn_min">Перезвонить мне</button>
+			</form>
+		</div>
+	</div>
 </div>
 
 </body>
