--- a/HomeWorks/index.html
+++ b/HomeWorks/index.html
@@ -11,30 +11,30 @@
 <div class="wrapper">
     <div class="header">
         <div class="container">
-            <div class="inner_header">
+            <div class="header_inner">
                 <a href="index.html">
-                    <div class="logotype">
+                    <div class="header_inner_logotype">
                         <h2>JavaScript</h2>
                     </div>
                 </a>
-                <ul class="menu">
-                    <li class="menu_link">
+                <ul class="header_inner_menu">
+                    <li class="header_inner_menu_link">
                         <a href="pages/home_works.html">Home Works</a>
                     </li>
-                    <li class="menu_link">
+                    <li class="header_inner_menu_link">
                         <a href="pages/lessons.html">Lessons</a>
                     </li>
-                    <li class="menu_link">
+                    <!-- <li class="header_inner_menu_link">
                         <a href="https://t.me/NurDinBuy16" target="_blank">Send hw</a>
-                    </li>
+                    </li> -->
                 </ul>
                 <button class="btn" id="btn-get">Click me!</button>
             </div>
         </div>
     </div>
-    <div class="main_block">
+    <div class="main">
         <div class="container">
-            <div class="inner_main">
+            <div class="main_inner">
                 <h1><strong id="js-color">JavaScript</strong> - на самом деле очень легко и просто!</h1>
                 <div class="colors-buttons">
                     <button class="btn btn-color"></button>
@@ -83,10 +83,10 @@
             </div>
         </div>
     </div>
-    <div class="block_video">
+    <div class="video_block">
         <div class="container">
             <h3>Полезный ролик про Event Loop</h3>
-            <div class="inner_block_video">
+            <div class="bideo_block_inner">
                 <iframe width="80%" height="450" src="https://www.youtube.com/embed/zDlg64fsQow" title="YouTube video player" frameborder="2" allow="autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
             </div>
         </div>
@@ -95,7 +95,7 @@
         <div class="container">
             <a href="https://www.instagram.com/nurdinbuy/" target="_blank">
                 <div class="inner_footer">
-                    <h2>Made by N.Akel</h2>
+                    <h2>Made by N.Akel & nurdinbuy</h2>
                 </div>
             </a>
         </div>
@@ -104,12 +104,12 @@
 
 <div class="modal">
     <div class="modal_dialog">
-        <div class="modal_content">
+        <div class="modal_dialog_content">
             <form action="#">
-                <div class="modal_close">&times;</div>
-                <div class="modal_title">Мы свяжемся с вами как можно быстрее!</div>
-                <input required placeholder="Ваше имя" name="name" type="text" class="modal_input">
-                <input required placeholder="Ваш номер телефона" name="phone" type="phone" class="modal_input">
+                <div class="modal_dialog_content_close">&times;</div>
+                <div class="modal_dialog_content_title">Мы свяжемся с вами как можно быстрее!</div>
+                <input required placeholder="Ваше имя" name="name" type="text" class="modal_dialog_content_input">
+                <input required placeholder="Ваш номер телефона" name="phone" type="phone" class="modal_dialog_content_input">
                 <button class="btn btn_dark btn_min">Перезвонить мне</button>
             </form>
         </div>
