--- a/HomeWorks/pages/lessons.html
+++ b/HomeWorks/pages/lessons.html
@@ -12,22 +12,22 @@
 <div class="wrapper">
 	<div class="header">
 	    <div class="container">
-	        <div class="inner_header">
+	        <div class="header_inner">
 	            <a href="../index.html">
-	                <div class="logotype">
+	                <div class="header_inner_logotype">
 	                    <h2>Java<span>Script</span></h2>
 	                </div>
 	            </a>
-	            <ul class="menu">
-	                <li class="menu_link">
+	            <ul class="header_inner_menu">
+	                <li class="header_inner_menu_link">
 	                    <a href="../pages/home_works.html">Home Works</a>
 	                </li>
-	                <li class="menu_link">
+	                <li class="header_inner_menu_link">
 	                    <a href="../pages/lessons.html">Lessons</a>
 	                </li>
-	                <li class="menu_link">
+	                <!-- <li class="header_inner_menu_link">
 	                    <a href="https://t.me/NurDinBuy16" target="_blank">Send hw</a>
-	                </li>
+	                </li> -->
 	            </ul>
 	            <button class="btn" id="btn-get">Click me!</button>
 	        </div>
