--- a/HomeWorks/index.html
+++ b/HomeWorks/index.html
@@ -24,9 +24,9 @@
                     <li class="header_inner_menu_link">
                         <a href="pages/lessons.html">Lessons</a>
                     </li>
-                    <!-- <li class="header_inner_menu_link">
-                        <a href="https://t.me/NurDinBuy16" target="_blank">Send hw</a>
-                    </li> -->
+                    <li class="header_inner_menu_link">
+                        <a href="pages/information.html">Information</a>
+                    </li>
                 </ul>
                 <button class="btn" id="btn-get">Click me!</button>
             </div>
@@ -93,9 +93,9 @@
     </div>
     <div class="footer">
         <div class="container">
-            <a href="https://www.instagram.com/nurdinbuy/" target="_blank">
+            <a href="#">
                 <div class="inner_footer">
-                    <h2>Made by N.Akel & nurdinbuy</h2>
+                    <h2>Made by N.Akel</h2>
                 </div>
             </a>
         </div>
