--- a/HomeWorks/pages/home_works.html
+++ b/HomeWorks/pages/home_works.html
@@ -25,9 +25,9 @@
                     <li class="header_inner_menu_link">
                         <a href="../pages/lessons.html">Lessons</a>
                     </li>
-                    <!-- <li class="header_inner_menu_link">
-                        <a href="https://t.me/NurDinBuy16" target="_blank">Send hw</a>
-                    </li> -->
+                    <li class="header_inner_menu_link">
+                        <a href="../pages/information.html">Information</a>
+                    </li>
                 </ul>
                 <button class="btn" id="btn-get">Click me!</button>
             </div>
@@ -77,11 +77,21 @@
             </div>
         </div>
     </div>
+
+	<div class="json">
+		<div class="container">
+			<h3>Home work 3</h3>
+			<div class="json_block">
+				<div class="json_block_users" id="users"></div>
+			</div>
+		</div>
+	</div>
+
     <div class="footer">
         <div class="container">
-            <a href="https://www.instagram.com/nurdinbuy/" target="_blank">
+            <a href="#">
                 <div class="inner_footer">
-                    <h2>Made by N.Akel & nurdinbuy</h2>
+                    <h2>Made by N.Akel</h2>
                 </div>
             </a>
         </div>
