--- a/HomeWorks/pages/lessons.html
+++ b/HomeWorks/pages/lessons.html
@@ -25,9 +25,9 @@
 	                <li class="header_inner_menu_link">
 	                    <a href="../pages/lessons.html">Lessons</a>
 	                </li>
-	                <!-- <li class="header_inner_menu_link">
-	                    <a href="https://t.me/NurDinBuy16" target="_blank">Send hw</a>
-	                </li> -->
+	                <li class="header_inner_menu_link">
+                        <a href="../pages/information.html">Information</a>
+                    </li>
 	            </ul>
 	            <button class="btn" id="btn-get">Click me!</button>
 	        </div>
@@ -94,11 +94,11 @@
 	</div>
 	<div class="footer">
 	    <div class="container">
-	        <a href="https://www.instagram.com/nurdinbuy/" target="_blank">
-	            <div class="inner_footer">
-	                <h2>Made by N.Akel</h2>
-	            </div>
-	        </a>
+	        <a href="#">
+                <div class="inner_footer">
+                    <h2>Made by N.Akel</h2>
+                </div>
+            </a>
 	    </div>
 	</div>
 </div>
