--- a/HomeWorks/pages/lessons.html
+++ b/HomeWorks/pages/lessons.html
@@ -82,6 +82,42 @@
             </div>
         </div>
     </div>
+	<div class="conventor">
+		<div class="container">
+			<h3>Conventor</h3>
+			<div class="conventor_inner">
+				<!-- <div class="conventor_inner_block">
+					<label for="yen">Yen</label>
+					<input type="number" class="yen" id="moneyInput">
+				</div>
+
+				<div class="conventor_inner_block">
+					<label for="tng">Tng</label>
+					<input type="number" class="tng" id="moneyInput">
+				</div> -->
+
+				<div class="conventor_inner_block">
+					<label for="som">Som</label>
+					<input type="number" class="som" id="moneyInput">
+				</div>
+
+				<div class="conventor_inner_block">
+					<label for="usd">Usd</label>
+					<input type="number" class="usd" id="moneyInput">
+				</div>
+
+				<div class="conventor_inner_block">
+					<label for="eur">Eur</label>
+					<input type="number" class="eur" id="moneyInput">
+				</div>
+
+				<div class="conventor_inner_block">
+					<label for="gbp">Gbp</label>
+					<input type="number" class="gbp" id="moneyInput">
+				</div>
+			</div>
+		</div>
+	</div>
 	<div class="card_switcher">
 	    <div class="container">
 	        <h3>Card Switcher</h3>
