--- a/HomeWorks/pages/lessons.html
+++ b/HomeWorks/pages/lessons.html
@@ -118,16 +118,18 @@
 			</div>
 		</div>
 	</div>
+
 	<div class="card_switcher">
 	    <div class="container">
 	        <h3>Card Switcher</h3>
-	        <div class="inner_card_switcher">
+	        <div class="card_inner_switcher">
 	            <button class="btn" id="btn-prev">prev</button>
 	            <div class="card"></div>
 	            <button class="btn" id="btn-next">next</button>
 	        </div>
 	    </div>
 	</div>
+	
 	<div class="footer">
 	    <div class="container">
 	        <a href="#">
