--- a/HomeWorks/pages/home_works.html
+++ b/HomeWorks/pages/home_works.html
@@ -26,6 +26,9 @@
                         <a href="../pages/lessons.html">Lessons</a>
                     </li>
                     <li class="header_inner_menu_link">
+                        <a href="../pages/cards.html">Cards</a>
+                    </li>
+                    <li class="header_inner_menu_link">
                         <a href="../pages/information.html">Information</a>
                     </li>
                 </ul>
@@ -36,7 +39,7 @@
     <div class="gmail_block">
         <div class="container">
             <h3>Home work 1 (part 1)</h3>
-            <div class="inner_gmail_block">
+            <div class="gmail_block_inner">
                 <div class="form_gmail">
                     <label for="gmail_input">your email</label>
                     <input type="text" id="gmail_input" placeholder="____@gmail.com">
@@ -47,12 +50,12 @@
         </div>
     </div>
 
-    <div class="move_block">
+    <div class="block_move">
         <div class="container">
             <h3>Home work 1 (part 2)</h3>
-            <div class="inner_move_block">
-                <div class="parent_block">
-                    <div class="child_block"></div>
+            <div class="block_move_inner">
+                <div class="block_parent">
+                    <div class="block_child"></div>
                 </div>
             </div>
         </div>
