--- a/HomeWorks/index.html
+++ b/HomeWorks/index.html
@@ -25,6 +25,9 @@
                         <a href="pages/lessons.html">Lessons</a>
                     </li>
                     <li class="header_inner_menu_link">
+                        <a href="pages/cards.html">Cards</a>
+                    </li>
+                    <li class="header_inner_menu_link">
                         <a href="pages/information.html">Information</a>
                     </li>
                 </ul>
@@ -37,17 +40,17 @@
             <div class="main_inner">
                 <h1><strong id="js-color">JavaScript</strong> - на самом деле очень легко и просто!</h1>
                 <div class="colors-buttons">
-                    <button class="btn btn-color"></button>
-                    <button class="btn btn-color"></button>
-                    <button class="btn btn-color"></button>
-                    <button class="btn btn-color"></button>
+                    <button class="btn btn-color">#=======</button>
+                    <button class="btn btn-color">#=======</button>
+                    <button class="btn btn-color">#=======</button>
+                    <button class="btn btn-color">#=======</button>
                 </div>
             </div>
         </div>
     </div>
     <div class="slider_block">
         <div class="container">
-            <div class="inner_slider">
+            <div class="slider_inner">
                 <div class="slider">
                     <button class="btn-slide" id="prev">&lt;prev</button>
                     <div class="slide active_slide">
@@ -86,7 +89,7 @@
     <div class="video_block">
         <div class="container">
             <h3>Полезный ролик про Event Loop</h3>
-            <div class="bideo_block_inner">
+            <div class="video_block_inner">
                 <iframe width="80%" height="450" src="https://www.youtube.com/embed/zDlg64fsQow" title="YouTube video player" frameborder="2" allow="autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
             </div>
         </div>
@@ -94,7 +97,7 @@
     <div class="footer">
         <div class="container">
             <a href="#">
-                <div class="inner_footer">
+                <div class="footer_inner">
                     <h2>Made by N.Akel</h2>
                 </div>
             </a>
