--- a/HomeWorks/pages/lessons.html
+++ b/HomeWorks/pages/lessons.html
@@ -25,6 +25,9 @@
 	                <li class="header_inner_menu_link">
 	                    <a href="../pages/lessons.html">Lessons</a>
 	                </li>
+					<li class="header_inner_menu_link">
+                        <a href="../pages/cards.html">Cards</a>
+                    </li>
 	                <li class="header_inner_menu_link">
                         <a href="../pages/information.html">Information</a>
                     </li>
@@ -36,10 +39,10 @@
 	<div class="phone_block">
 	    <div class="container">
 	        <h3>Phone checker</h3>
-	        <div class="inner_phone_block">
-	            <div class="form_phone">
+	        <div class="phone_block_inner">
+	            <div class="phone_form">
 	                <label for="phone_input">Your phone</label>
-	                <input type="text" id="phone_input" placeholder="+996 XXX XX-XX-XX">
+	                <input type="number" id="phone_input" placeholder="+996 XXX XX-XX-XX">
 	                <button class="btn" id="phone_button">Check number</button>
 	                <span class="checker" id="phone_result"></span>
 	            </div>
@@ -86,34 +89,54 @@
 		<div class="container">
 			<h3>Conventor</h3>
 			<div class="conventor_inner">
-				<!-- <div class="conventor_inner_block">
-					<label for="yen">Yen</label>
-					<input type="number" class="yen" id="moneyInput">
+				<div class="conventor_inner_block">
+					<label for="tng">Tng - ₸</label>
+					<input type="number" class="tng" id="moneyInput">
 				</div>
 
 				<div class="conventor_inner_block">
-					<label for="tng">Tng</label>
-					<input type="number" class="tng" id="moneyInput">
-				</div> -->
+					<label for="lkr">Lkr - ரூ</label>
+					<input type="number" class="lkr" id="moneyInput">
+				</div>
 
 				<div class="conventor_inner_block">
-					<label for="som">Som</label>
+					<label for="yen">Yen - ¥</label>
+					<input type="number" class="yen" id="moneyInput">
+				</div>
+				
+				<div class="conventor_inner_block">
+					<label for="rub">Rub - ₽</label>
+					<input type="number" class="rub" id="moneyInput">
+				</div>
+
+				<div class="conventor_inner_block">
+					<label for="som">Som - ...</label> 
 					<input type="number" class="som" id="moneyInput">
 				</div>
 
 				<div class="conventor_inner_block">
-					<label for="usd">Usd</label>
+					<label for="awg">Awg - ...</label>
+					<input type="number" class="awg" id="moneyInput">
+				</div>
+
+				<div class="conventor_inner_block">
+					<label for="usd">Usd - $</label>
 					<input type="number" class="usd" id="moneyInput">
 				</div>
 
 				<div class="conventor_inner_block">
-					<label for="eur">Eur</label>
+					<label for="eur">Eur - €</label>
 					<input type="number" class="eur" id="moneyInput">
 				</div>
 
 				<div class="conventor_inner_block">
-					<label for="gbp">Gbp</label>
+					<label for="gbp">Gbp - £</label>
 					<input type="number" class="gbp" id="moneyInput">
+				</div>
+
+				<div class="conventor_inner_block">
+					<label for="bhd">Bhd - ...</label>
+					<input type="number" class="bhd" id="moneyInput">
 				</div>
 			</div>
 		</div>
@@ -128,6 +151,19 @@
 	            <button class="btn" id="btn-next">next</button>
 	        </div>
 	    </div>
+	</div>
+
+	<div class="weather">
+		<div class="container">
+			<h3>Weather API</h3>
+			<div class="weather_inner">
+				<input type="text" class="searchCity" placeholder="Найти погоду в...">
+				<div class="weather_inner_result">
+					<h5 class="cityName">City</h5>
+					<p class="cityTemp">Temp</p>
+				</div>
+			</div>
+		</div>
 	</div>
 	
 	<div class="footer">
